--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
 <html>
     <title>Hola</title>
     <head>
         <h1>Ejercicio</h1>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
     </head>
+
+    <body>    
+        <h1>Proyecto empresarial</h1>
+    </body>
 </html>
